# horizon-mellanox

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  manage.py  setup.cfg  setup.py  tox.ini
devstack/: README.rst  plugin.sh
doc/source/: conf.py  index.rst  installation.rst  usage.rst
enabled/: _7000_mlx.py
horizon_mellanox/: __init__.py  dashboard.py
horizon_mellanox/aboutpanel/: panel.py  urls.py  views.py
horizon_mellanox/aboutpanel/templates/aboutpanel/: index.html
horizon_mellanox/neopanel/: panel.py  urls.py  views.py
horizon_mellanox/neopanel/templates/neopanel/: #index.html#  index.html
horizon_mellanox/settingspanel/: forms.py  panel.py  urls.py  views.py
horizon_mellanox/settingspanel/templates/settingspanel/: _change.html  change.html
horizon_mellanox/static/horizon_mellanox/js/: horizon_mellanox.js
horizon_mellanox/static/mellanox_dashboard/js/: mellanox_dashboard.js
horizon_mellanox/tests/: base.py  test_horizon_mellanox.py
horizon_mellanox/ufmpanel/: panel.py  tests.py  urls.py  views.py
mellanox_dashboard/: .models.py.swp
mellanox_dashboard/aboutpanel/: panel.py  tests.py  urls.py  urls.py~  views.py
mellanox_dashboard/api/rest/: __init__.py  mellanox_rest_api.py
mellanox_dashboard/neopanel/: .urls.py.swp  panel.py  panel.py~  tests.py  urls.py  views.py
mellanox_dashboard/settingspanel/: forms.py  panel.py  urls.py  views.py
mellanox_dashboard/templates/mellanox_dashboard/: base.html
mellanox_dashboard/ufmpanel/: panel.py  tests.py  urls.py  views.py
(+6 files in other folders)
