[metadata]
name = mellanox_dashboard
summary = plugin that view Mellanox products UIs.
description-file =
    README.rst
author = Murad Awawdeh
author-email = murada@mellanox.com
home-page = https://launchpad.net/horizon-mellanox
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    mellanox_dashboard
